# Caderno

./: .gitignore  ANALISE-COMPLETA-2026-06-28.md  ANALISE-v0.8-COMPLETA.md  CHANGELOG.md  COMO-FUNCIONA-SOE-CCG.md  CONCLUSAO-tecnica  CONTRIBUTING.md  CORRECOES-APLICADAS.md  ENTREGA-COMPLETA.md  FASE-0-RESUMO-EXECUTIVO.md  LEIA-ISTO-PRIMEIRO.md  LICENSE  MIGRATION_CLASSIFICATION.md  Makefile  OBSERVACAO2.md  PLAN-V2.md  PLAN-docs-07-uso-V2.md  README.md  RELATORIO-CLI-v0.8.0-FINAL.md  RELATORIO-v0.9.0-ETAPA-1.md  ROADMAP-v1.0.md  coverage.json  plano v0.8.0  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
banco_de_dados/: 00Tree.html
banco_de_dados/esquemas/: 00Tree.html  schema-sqlite-v1.sql
banco_de_dados/migracoes/: 00Tree.html
banco_de_dados/seeds/: 00Tree.html  seed-categorias.sql
banco_de_dados/sqlite/: 00Tree.html  soe-ccg.db
codigo/: 00Tree.html  __main__.py  importador-v1.py  importador.py  ir-v1.py  ir.py  parser-v1.py  parser.py  resolvedor-v1.py  resolvedor.py  validador-v1.py  validador.py
dados/: 00Tree.html
dados/anexos/: 00Tree.html
dados/equipamentos/: 00Tree.html  EQP-000001-panela-fundo-grosso-v1.md  EQP-000002-colher-silicone-v1.md
dados/execucoes/: 00Tree.html  EXE-000001-doce-leite-execucao1-v1.md  EXE-000001-doce-leite-v1-execucao1.md
dados/experimentos/: 00Tree.html
dados/importacao/: 00Tree.html
dados/ingredientes/: 00Tree.html  ING-000001-leite-integral.md  ING-000002-acucar-refinado-v1.md  ING-000003-sal-refinado-v1.md  ING-000004-bicarbonato-sodio.md  ING-000005-polvilho-azedo-v1.md
dados/observacoes/: 00Tree.html  OBS-000001-bicarbonato-efeito.md
dados/receitas/: 00Tree.html  REC-000001-doce-de-leite-artesanal-v1.md  doce-de-leite-artesanal-v1.md
dados/tecnicas/: 00Tree.html  TEC-000001-reducao-v1.md  TEC-000002-caramelizacao.md  (+1 more)
docs/: 00Tree.html  INDICE-MESTRE.md  MATRIZ-RASTREABILIDADE.md
files/: 01-MAPA-E-AUDITORIA.md  02-KERNEL-SPECIFICATION.md
kernel/: __init__.py  bootstrap.py
kernel-docs/: 00_constituicao-v1.md  01_regras_fundamentais-v1.md  02_invariantes-v1.md  03_modelo_dependencias-v1.md  04_regras_modulos-v1.md  05_regras_kernel-v1.md  06_politica_evolucao-v1.md  07_protocolo_agentes-v1.md  CONTRACT_SCHEMA.md  FASE-0-API-INTERNA.md  FASE-0-API-PUBLICA.md  FASE-0-FREEZE-ARQUITETURAL.md  FASE-0-LISTA-COMPONENTES.md  FASE-0-RESUMO.md  FASE-1-CAMADAS.md  FASE-1-MATRIZ-DEPENDENCIAS.md  FASE-1-RESPONSABILIDADES.md  FASE-1-RESUMO.md  FASE-10-RESUMO.md  FASE-12-RESUMO.md  FASE-2-EXPANSAO-CONTRACT.md  FASE-2-RESUMO.md  FASE-3-DIAGRAMA-LIFECYCLE.md  FASE-4-RESUMO.md  FASE-6-RESUMO.md  FASE-7-RESUMO.md  FASE-8-RESUMO.md  FASE-9-RESUMO.md
recursos/: 00Tree.html
scripts/: 00Tree.html  README.md  consolidate-v1-lote1.sh  consolidate-v1-lote2.sh  consolidate-v1-lote3.sh  faa.sh
soe_ccg/: __init__.py  parser.py
testes/: 00Tree.html  __init__.py
(+395 files in other folders)
